# star-find

./: Cargo.toml  README.md
img/: rr.xcf
src/: cli.rs  lib.rs  main.rs
tests/: app.rs
tests/expected/: 4_stars.out.txt  50_stars.c4.v.out.txt  50_stars.c8.v.out.txt
