[package]
name = "star-find"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.27"
opencv = "0.74.0"
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
assert_cmd = "2.0.6"


[profile.release]
strip = true  #Automatically strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction optimizations
