[package]
name = "starrynight"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.0.27" , features = ["derive"] }
opencv = "0.77"
serde = { version = "1", features = ["derive"] }
serde_json = "^1.0.91"

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "2.1"
rand = "0.8.5"

[profile.release]
strip = true  #Automatically strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction optimizations
